Fix name placement on tablet view

--- a/styles.css
+++ b/styles.css
@@ -166,12 +166,18 @@ h2 {
 
     .header-container {
         display: block;
+        margin-top: 100px;
     }
 
     .header-image-container {
         float: left;
         margin-right: 10px;
-        margin-top: -20px;
+        margin-top: -70px;
+    }
+
+    .header-image-name {
+        transform: translate(90%, -920%);
+        font-size: 36px;
     }
 
     .header-info-box {
@@ -221,6 +227,16 @@ h2 {
         background-color: transparent;
         box-shadow: none;
         gap: 10px;
+    }
+
+    .header-image-name {
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, -130%);
+        color: white;
+        font-size: 1.8rem;
+        text-shadow: 1px 1px 2px black;
+        background-color: transparent;
     }
 
     .social-icons {
